added roles package and stub for admin page

--- a/app/packages/.gitignore
+++ b/app/packages/.gitignore
@@ -2,3 +2,9 @@
 /bootstrap-themes
 /bootstrap-3
 /accounts-ui-bootstrap-3
+/accounts-admin-ui
+/jquery-ui
+/jqbootstrapvalidation
+/roles
+/accounts-admin-ui-bootstrap-3
+/bootstrap-modal
